test/classes/delete-free/tests-from-design-overview/generic-collection-borrowed-int-error.good
generic-collection-borrowed-int-error.chpl:13: In function 'test':
generic-collection-borrowed-int-error.chpl:16: error: unresolved type specifier 'Collection(type int(64))'
generic-collection-borrowed-int-error.chpl:5: note: candidates are: Collection(type element)
